kubernetes/local/test-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: llm-platform

spec:
  type: ClusterIP

  selector:
    app: test-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
